fixed some alignment issues in landing page

--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,6 @@
 
 @media (max-width: 420px){
   *{
-    font-size: 15px;
+    font-size: 18px;
   }
 }
