--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -4,7 +4,7 @@
 }
 
 .main{
-    padding: 0.6rem;
+    padding: 1rem;
 }
 
 .text{
