--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -1,5 +1,5 @@
 .nav{
-    width: 100vw;
+    width: 100%;
     height: 90%;
     background-image: url('../assets/landimg.png');
     background-repeat: no-repeat;
